--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -72,7 +72,7 @@ body {
     border: 2px solid;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
