new dropdown header and "Users" servlet javascript improvements

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -130,3 +130,6 @@ input[type=text], input[type=password], input[type=email] {
 .nav-h{
     margin-bottom: 2rem;
 }
+.nav-el{
+    color: white !important;
+}
